<resources>

    <string name="title_performance">Performance</string>
    <string name="title_last_matches">Last %1$d matches</string>
    <string name="title_no_matches">No data</string>

    <!--Drawer-->
    <string name="drawer_title_steam">Steam</string>
    <string name="drawer_title_user">User</string>
    <string name="drawer_title_dota">Dota2</string>
    <string name="drawer_title_matches">Matches</string>
    <string name="drawer_title_heroes">Heroes</string>
    <string name="drawer_title_items">Items</string>
    <string name="drawer_title_rate">Rate</string>
    <string name="drawer_title_about">About</string>

    <!--Errors-->
    <string name="error_authentication">There has been an issue communicating with the server.</string>
    <string name="error_permission_denied">This user\'s game details are private. If the account is yours, please try changing your settings from the in-game privacy settings.</string>
    <string name="error_failed_to_retrieve_data">There has been an issue fetching your data. Please try again later.</string>
    <string name="error_network">Sorry, something went wrong. Please check your network settings and try again.</string>
    <string name="error_server">We are sorry, there seems to be a problem. Please try again later.</string>
    <string name="error_no_players_found">We are sorry but no players could be found for these search parameters. Please tap on the info icon if you need help.</string>
    <string name="label_try_again">Try again</string>
    <string name="error_no_user">It seems that you have not selected a Steam user yet</string>
    <string name="error_failed_data">It seems like we could not fetch your data</string>
    <string name="error_label_go_to_login">Add a new user now</string>
    <string name="error_label_try_again">Try again</string>
    <string name="label_no_network_action">Settings</string>
    <string name="error_reason_no_games">No games found. This could be due to a privacy setting. Please refer to the Steam documentation on how to change this setting on the account.</string>


    <!--Steam Profile-->
    <string name="dota_data_available">Data available</string>
    <string name="dota_data_unavailable">Data private</string>


    <!--Steam Library-->
    <string name="label_hours_played">Hours Played: %1$s</string>
    <string name="label_last_2_weeks">Last 2 weeks: %1$s</string>


    <!--Drawer Item-->
    <string name="account_header_add_title">Add Account</string>
    <string name="account_header_add_email">Add new Steam Account</string>

    <!--League-->
    <string name="prefix_url">URL:</string>
    <string name="prefix_league_id">League ID:</string>
    <string name="net_worth">Team Net Worth: %1$d</string>
    <string name="title_live_picks">Picks</string>
    <string name="title_live_bans">Bans</string>
    <string name="match_id">Match ID:</string>
    <string name="duration">Timer:</string>

    <!--Special Characters-->
    <string name="hyphen">-</string>
    <string name="hyphen_numbers">%1$d - %2$d</string>
    <string name="slash_numbers">%1$d / %2$d</string>
    <string name="slash_text">%1$s / %2$s</string>

    <!--Content Descriptions-->
    <string name="cont_des_hero_portrait">Hero Portrait</string>
    <string name="cont_desc_attr_type">Attribute Type</string>
    <string name="ct_hero_image">Hero Image</string>
    <string name="ct_flag_placeholder">%1$s flag</string>
    <string name="ct_country_flag">Country flag</string>

    <!--Matches-->
    <string name="placeholder_last_hits">"Last hits: %1$d / Denies: %2$d"</string>
    <string name="prefix_kda">"KDA: "</string>
    <string name="message_wins">Wins: %1$d Losses: %2$d</string>
    <string name="faction_radiant">Radiant</string>
    <string name="faction_dire">Dire</string>
    <string name="title_radiant_victory">Radiant Victory</string>
    <string name="title_dire_victory">Dire Victory</string>
    <string name="label_player_won">Won Match</string>
    <string name="label_player_lost">Lost Match</string>

    <!--Hero-->
    <string name="hero_id">ID: %1$d</string>
    <string name="hero_original">(%1$s)</string>

    <!--toast-->
    <string name="toast_no_users_to_delete">There are no users to delete</string>
    <string name="toast_no_network">Please check your network settings</string>
    <string name="toast_fetching_more">Fetching %1$d additional matches</string>
    <string name="toast_fetched_max_matches">Fetched maximum number of matches</string>
    <string name="toast_data_loaded">Loaded %1$d matches</string>

    <!--menu-->
    <string name="menu_item_library">Library</string>
    <string name="menu_item_user_profile">User Profile</string>
    <string name="menu_item_live">Live</string>
    <string name="menu_item_leagues">Leagues</string>
    <string name="menu_item_history">History</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_title_calendar">Calendar</string>

    <!--Login-->
    <string name="intro">If you do not know the account id you are looking for, you can try logging in through Steam instead. \nThis application uses Steam OpenID to authenticate the user through Valve\'s servers. This is done in order to protect your personal information.
        \n\nYour username and password will not be stored by the application nor will the creator have access to any data downloaded by the application.
    \n</string>
    <string name="sign_in">Sign in</string>
    <string name="title_sign_in">Add account</string>
    <string name="title_select_account">Select an account</string>

    <string name="text_info_select_popular">You could alternatively try selecting a popular player\'s profile.</string>
    <string name="text_button_select_popular">Select a popular player</string>

    <!--dialog-->
    <string name="dialog_delete_user_body">"Are you sure you want to delete user '%1$s'?"</string>
    <string name="dialog_delete_title">Delete user</string>
    <string name="message_ok">OK</string>
    <string name="message_cancel">Cancel</string>
    <string name="dialog_no_network">We are sorry but we could not connect to the network. Please check your settings and try again.</string>
    <string name="dialog_title">Something went wrong</string>

    <!--popular player values-->
    <string name="id_64">Steam ID64: %1$s</string>
    <string name="id_3">Steam ID3: %1$s</string>

    <!--hero attributes-->
    <string name="placeholder_attr_max">%1$d + %2$s/level (max %3$s)</string>
    <string name="placeholder_attr">%1$d + %2$s/level</string>
    <string name="attr_hp_regen">HP Regen:</string>
    <string name="attr_total_attributes">Total Attributes:</string>
    <string name="attr_starting_armor">Starting Armor:</string>
    <string name="attr_movement_speed">Movement Speed:</string>
    <string name="attr_turn_rate">Turn Rate:</string>
    <string name="attr_starting_damage">Starting Damage:</string>
    <string name="attr_attack_range">Attack Range:</string>
    <string name="attr_attack_point">Attack Point:</string>
    <string name="attr_attack_backswing">Attack Backswing:</string>
    <string name="attr_vision_day_night">Vision Day / Night:</string>
    <string name="menu_item_add_user">Add User</string>

    <!--Rarity-->
    <string name="rarity_id">"ID: %1$s"</string>
    <string name="rarity_order">"Order: %1$s"</string>
    <string name="ct_item_portrait">Item Portrait</string>

    <!--Items-->
    <string name="item_cost">"Cost: %1$s"</string>
    <string name="item_side_shop">Side Shop</string>
    <string name="item_secret_shop">Secret Shop</string>
    <string name="title_login">Login</string>
    <string name="help_1">How to find a User\'s ID</string>
    <string name="help_2">If you have their vanity URL, it should look like this:</string>
    <string name="help_3"><![CDATA[http://steamcommunity.com/id/<vanity_name>/]]></string>
    <string name="help_4">If you have an ID url:</string>
    <string name="help_6"><![CDATA[Then the <id> is their 64-bit ID and you should copy that e.g. 76561198036748162. A 32-bit ID will also work as it will be converted internally.]]></string>
    <string name="help_5"><![CDATA[http://steamcommunity.com/profiles/<id>/]]></string>
    <string name="help_7"><![CDATA[You should copy the <vanity_name> part e.g. ana]]></string>
    <string name="title_help">Help</string>

</resources>
