<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    style="@style/AppTheme.CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="@dimen/margin_8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="@dimen/padding_8dp">

    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/ct_item_portrait"
            tools:src="@drawable/ic_default"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_name"
                style="@style/AppTheme.TextView.Info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium_large"
                tools:text="Placeholder"/>

            <TextView
                android:id="@+id/text_cost"
                style="@style/AppTheme.TextView.Info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Placeholder"/>


            <TextView
                android:id="@+id/text_side_shop"
                style="@style/AppTheme.TextView.Info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_side_shop"/>

            <TextView
                android:id="@+id/text_secret_shop"
                style="@style/AppTheme.TextView.Info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_secret_shop"/>

        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>
